--- a/index.html
+++ b/index.html
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Beat the Coronavirus!</title>
+	
+
+	<title>Connect Four</title>
+
+
+
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
+	</script>
+	<script type="text/javascript" src="index.js">
+	</script>
+
+	<link rel="stylesheet" type="text/css" href="index.css">
+
 </head>
+
 <body>
-	<h1>hi</h1>
+
+	<h1>Beat Coronavirus!</h1>
+
+
+
 </body>
+
 </html>
