added game mechanics

--- a/index.html
+++ b/index.html
@@ -2,24 +2,25 @@
 <html>
 
 <head>
-	
+	<title>Beat Coronavirus!</title>
 
-	<title>Connect Four</title>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 
-
-
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
-	</script>
-	<script type="text/javascript" src="index.js">
-	</script>
-
-	<link rel="stylesheet" type="text/css" href="index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    
+	<link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 
 <body>
 
-	<h1>Beat Coronavirus!</h1>
+	<h1>BEAT CORONAVIRUS!</h1>
+    <h2><a href="play">PLAY</a></h2>
+    <h2><a href="help">HELP</a></h2>
+    <h2><a href="https://www.google.com/covid19-map/">OPEN LIVE TRACKER</a></h2> <!-- TODO: give link to traker and maybe add link elsewhere icon -->
+    <h2><a href="coronainfo">CORONAVIRUS INFO</a></h2>
+    <h2><a href="credits">CREDITS</a></h2>
 
 
 
