--- a/play/index.html
+++ b/play/index.html
@@ -15,37 +15,37 @@
 	<h1 id="title">BEAT CORONAVIRUS!</h1>
 
 	<div id="scene">
-		<img id="player" src="/img/player/default.png"></img>
+		<img id="player" src="../img/player/default.png"></img>
 
         <div id="window1" class="scene1 windows"></div>
         <div id="window2" class="scene1 windows"></div>
-        <img id="table" class="scene1" src="/img/table.png"></img>
-        <img id="mask" class="scene1" src="/img/mask.png"></img>
-        <img id="door" class="scene1" src="/img/door.png"></img>
+        <img id="table" class="scene1" src="../img/table.png"></img>
+        <img id="mask" class="scene1" src="../img/mask.png"></img>
+        <img id="door" class="scene1" src="../img/door.png"></img>
 
-        <img id="shelf" class="scene2" src="/img/shelf.png" style="display: none;"></img>
-        <img class="scene2 tp row3" src="/img/toilet-paper.png" style="display: none;"></img>
-        <img class="scene2 tp row2" src="/img/toilet-paper.png" style="display: none;"></img>
-        <img class="scene2 tp row1" src="/img/toilet-paper.png" style="display: none;"></img>
-        <img class="scene2 water row3" src="/img/water.png" style="display: none;"></img>
-        <img class="scene2 water row2" src="/img/water.png" style="display: none;"></img>
-        <img class="scene2 water row1" src="/img/water.png" style="display: none;"></img>
-        <img class="scene2 candy row3" src="/img/candy.png" style="display: none;"></img>
-        <img class="scene2 candy row2" src="/img/candy.png" style="display: none;"></img>
-        <img class="scene2 candy row1" src="/img/candy.png" style="display: none;"></img>
-        <img class="scene2 apple row3" src="/img/apple.png" style="display: none;"></img>
-        <img class="scene2 apple row2" src="/img/apple.png" style="display: none;"></img>
-        <img class="scene2 apple row1" src="/img/apple.png" style="display: none;"></img>
-        <img class="scene2 soap row3" src="/img/soap.png" style="display: none;"></img>
-        <img class="scene2 soap row2" src="/img/soap.png" style="display: none;"></img>
-        <img class="scene2 soap row1" src="/img/soap.png" style="display: none;"></img>
-        <img class="scene2 firstaid row3" src="/img/firstaid.png" style="display: none;"></img>
-        <img class="scene2 firstaid row2" src="/img/firstaid.png" style="display: none;"></img>
-        <img class="scene2 firstaid row1" src="/img/firstaid.png" style="display: none;"></img>
-        <img id="right-arrow" class="scene2" src="/img/right-arrow.png" style="display: none;"></img>
-        <img id="left-arrow" class="scene3" src="/img/left-arrow.png" style="display: none;"></img>
-        <img id="sink" class="scene4" src="/img/sink.png" style="display: none;"></img>
-        <img id="toilet" class="scene4" src="/img/toilet.png" style="display: none;"></img>
+        <img id="shelf" class="scene2" src="../img/shelf.png" style="display: none;"></img>
+        <img class="scene2 tp row3" src="../img/toilet-paper.png" style="display: none;"></img>
+        <img class="scene2 tp row2" src="../img/toilet-paper.png" style="display: none;"></img>
+        <img class="scene2 tp row1" src="../img/toilet-paper.png" style="display: none;"></img>
+        <img class="scene2 water row3" src="../img/water.png" style="display: none;"></img>
+        <img class="scene2 water row2" src="../img/water.png" style="display: none;"></img>
+        <img class="scene2 water row1" src="../img/water.png" style="display: none;"></img>
+        <img class="scene2 candy row3" src="../img/candy.png" style="display: none;"></img>
+        <img class="scene2 candy row2" src="../img/candy.png" style="display: none;"></img>
+        <img class="scene2 candy row1" src="../img/candy.png" style="display: none;"></img>
+        <img class="scene2 apple row3" src="../img/apple.png" style="display: none;"></img>
+        <img class="scene2 apple row2" src="../img/apple.png" style="display: none;"></img>
+        <img class="scene2 apple row1" src="../img/apple.png" style="display: none;"></img>
+        <img class="scene2 soap row3" src="../img/soap.png" style="display: none;"></img>
+        <img class="scene2 soap row2" src="../img/soap.png" style="display: none;"></img>
+        <img class="scene2 soap row1" src="../img/soap.png" style="display: none;"></img>
+        <img class="scene2 firstaid row3" src="../img/firstaid.png" style="display: none;"></img>
+        <img class="scene2 firstaid row2" src="../img/firstaid.png" style="display: none;"></img>
+        <img class="scene2 firstaid row1" src="../img/firstaid.png" style="display: none;"></img>
+        <img id="right-arrow" class="scene2" src="../img/right-arrow.png" style="display: none;"></img>
+        <img id="left-arrow" class="scene3" src="../img/left-arrow.png" style="display: none;"></img>
+        <img id="sink" class="scene4" src="../img/sink.png" style="display: none;"></img>
+        <img id="toilet" class="scene4" src="../img/toilet.png" style="display: none;"></img>
         <div id="wall" class="scene4"></div>
         <div id="livingroom" class="scene4"></div>
         <div id="window3" class="scene4 windows"></div>
@@ -69,7 +69,6 @@
 </body>
 
 
-	<!-- <script type="text/javascript" src="moveAnimations.js"></script> -->
 	<script type="text/javascript" src="script.js"></script>
 
 </html>
