main menu asthetics

--- a/index.html
+++ b/index.html
@@ -16,13 +16,10 @@
 <body>
 
 	<h1>BEAT CORONAVIRUS!</h1>
-    <h2><a href="play">PLAY</a></h2>
-    <h2><a href="help">HELP</a></h2>
-    <h2><a href="https://www.google.com/covid19-map/">OPEN LIVE TRACKER</a></h2> <!-- TODO: give link to traker and maybe add link elsewhere icon -->
-    <h2><a href="coronainfo">CORONAVIRUS INFO</a></h2>
-    <h2><a href="credits">CREDITS</a></h2>
-
-
+    <a href="play">PLAY</a>
+    <a href="https://www.google.com/covid19-map/">OPEN LIVE TRACKER</a> <!-- TODO: give link to traker and maybe add link elsewhere icon -->
+    <a href="coronainfo">CORONAVIRUS INFO</a>
+    <a href="credits">CREDITS</a>
 
 </body>
 
