more game mechanics + final touches

--- a/play/index.html
+++ b/play/index.html
@@ -1,3 +1,4 @@
+<!-- Created By David Zhan and Michael Liu for the TitanHacks 2020 Hackathon -->
 <!DOCTYPE html>
 <html>
 
@@ -55,6 +56,7 @@
     </div>
 
     <div id="instructions">
+        <div id="error" style="display: none;"><h3></h3></div>
         <h4 id="task">TASK:</h4>
         <p id="task1" class="scene1">Wear the mask with <span>SPACE</span> and leave you house to go shopping with SPACE at the door.</p>
         <p id="task2" class="scene2" style="display: none;">Buy what you need with <span>SPACE</span>, but don't take everything! When you're done, head right to checkout.</p>
