--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
+<!-- Created By David Zhan and Michael Liu for the TitanHacks 2020 Hackathon -->
 <!DOCTYPE html>
 <html>
 
 <head>
 	<title>Beat Coronavirus!</title>
-
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script type="text/javascript" src="script.js"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     
@@ -17,9 +15,13 @@
 
 	<h1>BEAT CORONAVIRUS!</h1>
     <a href="play">PLAY</a>
-    <a href="https://www.google.com/covid19-map/">OPEN LIVE TRACKER</a> <!-- TODO: give link to traker and maybe add link elsewhere icon -->
     <a href="coronainfo">CORONAVIRUS INFO</a>
-    <a href="credits">CREDITS</a>
+    <a href="https://www.google.com/covid19-map/">OPEN LIVE TRACKER</a>
+    <div id="credits">
+        <h2>Created by:</h2>
+        <h2>David Zhan</h2>
+        <h2>Michael Liu</h2>
+    </div>
 
 </body>
 
